--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   "homepage": "https://github.com/SOS1617/SOS1617-11#readme",
   "dependencies": {
     "express": "^4.14.1",
-    "fecha": "^2.3.0"
+    "fecha": "^2.3.0",
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "helmet": "^3.5.0",
+    "mongodb": "^2.2.25",
+    "nedb": "^1.8.0",
+    "path": "^0.12.7"
   }
 }
