--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "helmet": "^3.5.0",
     "mongodb": "^2.2.25",
     "nedb": "^1.8.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "protractor": "^5.1.1"
+    "phantomjs": "^2.1.7"
+    
   },
   "devDependencies": {}
 }
